# TheArtOfHPC_vol1_scientificcomputing

./: .gitignore  Makefile  README.md
booksources/: EijkhoutIntroToHPC.tex  Makefile  acronyms.tex  boek3.cls  chapternames.tex  copyright.tex  inex.tex  introduction.tex  tutorialintro.tex
booksources/appendices/: blurb.tex  codes.tex  complexity.tex  fft.tex  fsa.tex  graph.tex  newton.tex  norms.tex  pde.tex  prefix.tex  random.tex  taylor.tex
booksources/applications/: allpairs15d.tex  analytics.tex  bio.tex  combinatorics.tex  discrete.tex  graphalgorithms.tex  graphics.tex  ising.tex  lbm.tex  learning.tex  md.tex  montecarlo.tex  physics.tex  quantum.tex  sorting.tex
booksources/chapters/: applications.tex  approximation.tex  arithmetic.tex  asymptotics.tex  capability.tex  cg.tex  cloud.tex  collective.tex  dissection.tex  eigenvalue.tex  ernie.tex  fpga.tex  gaussparallel.tex  goto.tex  gpu.tex  granularity.tex  graphcompute.tex  hetero.tex  hybrid.tex  implicit.tex  languages.tex  linear.tex  load.tex  localglobal.tex  mapreduce.tex  memorycoding.tex  mpi.tex  mta.tex  mvpscaling.tex  namd.tex  odepde.tex  parallel.tex  parallellinear.tex  parallelprogramming.tex  pcg.tex  performance.tex  pgmres.tex  power.tex  programming.tex  race1.tex  (+10 more)
booksources/macros/: bookmacs.tex  exmacs-public.tex  exmacs.tex  mathjax_sw.tex  robertmacros.tex  scimacs.tex  slidemacs.tex  snippetmacs.tex  tikzplot.tex  tutmacs.tex
booksources/makefiles/: Make.clean  Make.compile  Make.omp_run  Make.public  Make.run  Make.tex  Make.upload
booksources/mdchapter/: bib
booksources/plot/: Makefile  Makefile~  amdahl.py~  cmake-includedir.md5  cmake-insource.md5  cmake-install.md5  cmake-lib.md5  cmake-outsource.md5  cmake-publiblib.md5  cmake-withlib.md5  hpc-stride.md5  overhead.py  overhead.py~  scicomptutorials-figure0.md5
booksources/projects/: bsp.tex  cache.tex  heat.tex  wall.tex
booksources/snippets/: $$s  \  argumentshift  bandwidthstream  bandwidththreads  blockedtranspose  c99array  cachesumstream  cansipass2d  cansiset1d  cansiset2d  cansisetstar  cbinread  cbinwrite  cmalloc2d  cmallocpass  cmallocsizenn  cmallocsizenn2  cmallocsizenn3  computedenormal  cppbitprint  cprintbits  descentcircle  descentellipse  elimit  eseries  expfact  expfactback  expinv  fbinwrite  foomain  foomainx  foosub  foosubx  functiondef  gdb-square  gdb-up  gdbrootsc  gdbsquare1c  givensfun  (+34 more)
booksources/tutorials/: array.tex  bit.tex  blas.tex  blurb.tex  cmake.tex  coding.tex  compile.tex  cperf.tex  debug.tex  download.tex  editors.tex  git.tex  gnumake.tex  gnuplot.tex  hdf5.tex  language.tex  latex.tex  mercurial.tex  paralleldebug.tex  parallelio.tex  performance.tex  petsc.tex  random.tex  slurm.tex  subversion.tex  svn.tex  tau.tex  tracing.tex  unix.tex
code/754/: Makefile  bitprint.cxx  bitprint.runout  elimit.c  elimit.runout  fake.cxx  sineseries.c  sqrt.c
code/arithmetic/: Makefile  abc.cxx  abc_double.runout  abc_float.runout  bitp.py  bits.c  bits.runout  intc.c  intc.runout  oddeven.c  power.c  power.runout  printbits.c  sqrtdif.py
code/arithmetic_exercises/: Makefile  bitp.py  bits.c  ellipse.runout  intc.c  neuralnet.runout  pi.runout  power.c
code/array/: Makefile  c99.c  cansi.c  cmalloc.c  cmalloc.runout  cmalloc2d.c  cmalloc2d.runout  cmallocpass.runout  pass2d.runout  rowlength.runout  set1d.runout  set2d.runout  set99.runout  setstar.runout
code/boostpy/: Makefile  hello.cxx  hello.h  hello.py  hello_ext.cxx
code/cfinterop/: Makefile  carray.c  carraycall.F90  carraylib.c
code/cmake/: Makefile
code/compile/: Makefile  dynamicprogram.runout  makedynamiclib.runout  makeoneprogram.runout  makeseparatecompile.runout  rpathprogram.runout  (+3 more)
slides/: BH-slides.tex  CMake-slides.tex  CMakecustom-slides.tex  CMakedata-slides.tex  CMakedesign-slides.tex  CMakeexamples-slides.tex  CMakefind-slides.tex  CMakempiomp-slides.tex  CMakeother-slides.tex  CMakepc-slides.tex  CMakepcin-slides.tex  Collectives.tex  ComputerArithmetic-slides.tex  Debug-slides.tex  DenseMVP.tex  DomainDecomp-slides.tex  GraphAlgorithms-slides.tex  HPC-slides.tex  ImplicitParallel.tex  IncompleteLU.tex  IterativeComputational.tex  IterativeMethods-slides.tex  LatencyHiding.tex  LinearAlgebra-slides.tex  MPI-slides.tex  Makefile  MulticoreBlock.tex  Nbody-slides.tex  ParallelLU.tex  Parallelism-slides.tex  PartialDifferentialEquation-slides.tex  Performance-slides.tex  ProcessorArchitecture-slides.tex  ProfilingOptimization-slides.tex  Scaling-slides.tex  SparseMVP.tex  SparseMatrices-slides.tex  acronyms.tex  courseformat.tex  hpc_architecture.tex  (+22 more)
tutorials/cmake/arias_demo/: CMakeLists.txt
tutorials/cmake/arias_demo/include/arias/: arias.h
tutorials/cmake/arias_demo/src/: utils.cpp  utils.hpp
tutorials/cmake/cmakegood2b/: CMakeLists.txt
tutorials/cmake/cuda/: CMakeLists.txt  main.cxx
tutorials/cmake/cuda/kernels/: CMakeLists.txt  test.cu  test.cuh
tutorials/cmake/cxxopts/: CMakeLists.txt  program.cxx
tutorials/cmake/fmtlib/: CMakeLists.txt  program.cxx
tutorials/cmake/fmtliblib/: CMakeLists.txt
tutorials/cmake/fmtliblib/prolib/: CMakeLists.txt  aux.cxx
tutorials/cmake/headeronly/: CMakeLists.txt  program.cxx
tutorials/cmake/headeronly/inc/: aux.h
tutorials/cmake/includedir/: CMakeLists.txt
tutorials/cmake/includedir/src/: aux.cxx  aux1.cxx  aux2.cxx
tutorials/cmake/mklcmake/: CMakeLists.txt  program.cxx
tutorials/cmake/mpiprog/: CMakeLists.txt  program.cxx
tutorials/cmake/multiple/: CMakeLists.txt
tutorials/cmake/oneapi/: CMakeLists.txt
tutorials/cmake/pclib/: CMakeLists.txt  pclib.pc.in
tutorials/cmake/petscprog/: CMakeLists.txt  program.cxx
tutorials/cmake/privatelib/: CMakeLists.txt  aux.h
tutorials/cmake/publiclib/: CMakeLists.txt  program.cxx
tutorials/cmake/publiclib/lib/: CMakeLists.txt
tutorials/cmake/siliceum1/: CMakeLists.txt  hello.cxx
tutorials/cmake/siliceum1/funlib/: fun.cxx
tutorials/cmake/somelib/: CMakeLists.txt  program.cxx
tutorials/cmake/usepubliclib/: CMakeLists.txt
tutorials/cmake/withlib/: CMakeLists.txt
(+411 files in other folders)
